[metadata]
name = ArgParser
version = 1.0.0
author = q3st1on
description = ArgParser library for simplifying argument handling in classes
long_description = file: README.md
long_description_content_type = text/markdown
license = "GPL-3.0-only	"
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6